# KamboChat

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  KEY_VAULT_SETUP.md  README.md  azure.yaml  azure_integrated.yaml  gradio_app.py  main.py  main_integrated.py  migrate_to_uv.py  pyproject.toml  requirements.txt  run_gradio.py  setup_key_vault.py  startup.py  startup.sh  startup_integrated.sh  startup_pip.sh  test_api.py  test_app.py  test_azure_deployment.py  test_explicit_graph.py  test_graph.py  test_langchain.py  uv_commands.md  web.config  web_integrated.config
.cursor/: cursor.json
.github/workflows/: azure-deploy.yml  main_app-kambochat-cus.yml
src/: __init__.py  config.py
src/agents/: base_agent.py  kambo_agent.py  medical_verifier.py
src/chatbot/: coordinator.py
src/database/: connection.py  models.py
src/langchain/: __init__.py  chains.py  coordinator.py  explicit_coordinator.py  explicit_graph.py  llm_setup.py  prompts.py
src/rag/: knowledge_base.py
src/security/: input_validator.py  key_vault.py
